--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <fieldset>
         <legend><h2>Personal Information</h2></legend>
-        <form action="front.html" method="post">
+        <form action="front.html" method="get">
             <table>
                     <tr><td>First Name:<td><input type=text name=fname placeholder=FirstName>
                     <tr><td>Last Name:<td><input type=text name=lname placeholder=LastName>
